Use Python topi for conv2d implementation

--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -4,6 +4,10 @@ set(GOOGLETEST_INCLUDE_DIRS ${ONIKU_ROOT_DIR}/googletest/googletest/include)
 set(GSLLITE_INCLUDE_DIRS ${ONIKU_ROOT_DIR}/gsl-lite/include)
 set(OPTIONALLITE_INCLUDE_DIRS ${ONIKU_ROOT_DIR}/optional-lite/include)
 
+if (${ONIKU_ENABLE_PYTHON})
+  add_definitions(-DONIKU_ENABLE_PYTHON=1)
+endif()
+
 add_custom_command(
   OUTPUT
     ${CMAKE_CURRENT_BINARY_DIR}/gen_node_base.h
