Fix full build by splitting code generator of XCVM

--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -17,6 +17,20 @@ add_custom_command(
   DEPENDS ${ONIKU_COMMON_DIR}/codegen_util.py)
 add_custom_target(gen_node_base_h DEPENDS gen_node_base.h)
 
+add_custom_command(
+  OUTPUT
+    ${CMAKE_CURRENT_BINARY_DIR}/gen_xcvm_codegen.h
+    ${CMAKE_CURRENT_BINARY_DIR}/gen_xcvm_codegen.cc
+  COMMAND python3 ${CMAKE_CURRENT_SOURCE_DIR}/xcvm/gen_xcvm_codegen.py
+    --input-dir ${CMAKE_CURRENT_SOURCE_DIR}
+    --output-dir ${CMAKE_CURRENT_BINARY_DIR}
+  MAIN_DEPENDENCY xcvm/gen_xcvm_codegen.py
+  DEPENDS ${ONIKU_COMMON_DIR}/codegen_util.py ${ONIKU_ROOT_DIR}/runtime/gen_xcvm.py)
+add_custom_target(
+  compiler_xcvm_codegen_h
+  DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/gen_xcvm_codegen.h
+  )
+
 include_directories(${GSLLITE_INCLUDE_DIRS})
 include_directories(${OPTIONALLITE_INCLUDE_DIRS})
 include_directories(${ONIKU_ROOT_DIR})
@@ -60,7 +74,7 @@ add_library(oniku_compiler
   )
 add_dependencies(
   oniku_compiler
-  runtime_xcvm_pb_h runtime_xcvm_codegen_h gen_node_base_h onnx_files
+  runtime_xcvm_pb_h compiler_xcvm_codegen_h gen_node_base_h onnx_files
   )
 
 include_directories(${GOOGLETEST_INCLUDE_DIRS})
