Factor out constant ops from xcvm_ops

--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -36,6 +36,7 @@ add_library(oniku_runtime
   meminfo.cc
   ops/activation.cc
   ops/connection.cc
+  ops/constant.cc
   ops/cudnn_rnn.cc
   ops/generic.cc
   ops/logic.cc
