Factor out slice ops from xcvm_ops

--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -47,6 +47,7 @@ add_library(oniku_runtime
   ops/pooling.cc
   ops/rnn.cc
   ops/sequence.cc
+  ops/slice.cc
   ops/tvm.cc
   xchainer.cc
   xcvm.cc
