--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -50,6 +50,7 @@ add_library(oniku_runtime
   ops/rnn.cc
   ops/sequence.cc
   ops/sorting.cc
+  ops/statistics.cc
   ops/tvm.cc
   xchainer.cc
   xcvm.cc
