--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -1,8 +1,8 @@
-get_filename_component(ONIKU_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR} PATH)
-set(ONIKU_COMMON_DIR ${ONIKU_ROOT_DIR}/common)
-set(GOOGLETEST_INCLUDE_DIRS ${ONIKU_ROOT_DIR}/googletest/googletest/include)
-set(GSLLITE_INCLUDE_DIRS ${ONIKU_ROOT_DIR}/gsl-lite/include)
-set(OPTIONALLITE_INCLUDE_DIRS ${ONIKU_ROOT_DIR}/optional-lite/include)
+get_filename_component(CHAINER_COMPILER_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR} PATH)
+set(CHAINER_COMPILER_COMMON_DIR ${CHAINER_COMPILER_ROOT_DIR}/common)
+set(GOOGLETEST_INCLUDE_DIRS ${CHAINER_COMPILER_ROOT_DIR}/googletest/googletest/include)
+set(GSLLITE_INCLUDE_DIRS ${CHAINER_COMPILER_ROOT_DIR}/gsl-lite/include)
+set(OPTIONALLITE_INCLUDE_DIRS ${CHAINER_COMPILER_ROOT_DIR}/optional-lite/include)
 
 add_custom_command(
   OUTPUT
@@ -15,7 +15,7 @@ add_custom_command(
     --output-dir ${CMAKE_CURRENT_BINARY_DIR}
   MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/gen_xcvm.py
   DEPENDS
-    ${ONIKU_COMMON_DIR}/codegen_util.py
+    ${CHAINER_COMPILER_COMMON_DIR}/codegen_util.py
     ${CMAKE_CURRENT_SOURCE_DIR}/xcvm_defs.py
     ${CMAKE_CURRENT_SOURCE_DIR}/xcvm.proto.tmpl
     )
@@ -23,7 +23,7 @@ add_custom_target(runtime_xcvm_pb_h DEPENDS xcvm.pb.h)
 
 include_directories(${GSLLITE_INCLUDE_DIRS})
 include_directories(${OPTIONALLITE_INCLUDE_DIRS})
-include_directories(${ONIKU_ROOT_DIR})
+include_directories(${CHAINER_COMPILER_ROOT_DIR})
 include_directories(${CUDA_INCLUDE_DIRS})
 include_directories(${CMAKE_BINARY_DIR}) # the root build directory instead of `build/runtime`
 add_library(oniku_runtime
@@ -76,8 +76,8 @@ target_link_libraries(runtime_test
   gtest
   gtest_main
   pthread
-  ${ONIKU_TVM_RUNTIME_LIBRARIES}
-  ${ONIKU_CUDA_LIBRARIES}
+  ${CHAINER_COMPILER_TVM_RUNTIME_LIBRARIES}
+  ${CHAINER_COMPILER_CUDA_LIBRARIES}
   )
 
 add_test(
