--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,10 +1,10 @@
-get_filename_component(ONIKU_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR} PATH)
-set(GSLLITE_INCLUDE_DIRS ${ONIKU_ROOT_DIR}/gsl-lite/include)
-set(OPTIONALLITE_INCLUDE_DIRS ${ONIKU_ROOT_DIR}/optional-lite/include)
+get_filename_component(CHAINER_COMPILER_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR} PATH)
+set(GSLLITE_INCLUDE_DIRS ${CHAINER_COMPILER_ROOT_DIR}/gsl-lite/include)
+set(OPTIONALLITE_INCLUDE_DIRS ${CHAINER_COMPILER_ROOT_DIR}/optional-lite/include)
 
 include_directories(${GSLLITE_INCLUDE_DIRS})
 include_directories(${OPTIONALLITE_INCLUDE_DIRS})
-include_directories(${ONIKU_ROOT_DIR})
+include_directories(${CHAINER_COMPILER_ROOT_DIR})
 include_directories(${CMAKE_BINARY_DIR}) # the root directory instead of `build/tools`
 
 include_directories(${CUDA_INCLUDE_DIRS})
@@ -43,12 +43,12 @@ target_link_libraries(run_onnx
   onnx
   onnx_proto
   protobuf
-  ${ONIKU_TVM_LIBRARIES}
-  ${ONIKU_CUDA_LIBRARIES}
+  ${CHAINER_COMPILER_TVM_LIBRARIES}
+  ${CHAINER_COMPILER_CUDA_LIBRARIES}
   )
 set_target_properties(run_onnx PROPERTIES OUTPUT_NAME "run_onnx")
 
-if(${ONIKU_ENABLE_OPENCV})
+if(${CHAINER_COMPILER_ENABLE_OPENCV})
   add_library(train_imagenet_lib
     train_imagenet.cc
     )
@@ -68,14 +68,14 @@ if(${ONIKU_ENABLE_OPENCV})
     onnx_proto
     protobuf
     pthread
-    ${ONIKU_TVM_LIBRARIES}
-    ${ONIKU_CUDA_LIBRARIES}
+    ${CHAINER_COMPILER_TVM_LIBRARIES}
+    ${CHAINER_COMPILER_CUDA_LIBRARIES}
     ${OpenCV_LIBS}
     )
   set_target_properties(train_imagenet PROPERTIES OUTPUT_NAME "train_imagenet")
 endif()
 
-if (${ONIKU_ENABLE_PYTHON})
+if (${CHAINER_COMPILER_ENABLE_PYTHON})
   include_directories(${PYTHON_INCLUDE_DIRS})
 
   add_library(run_onnx_core.so MODULE run_onnx_core.cc)
@@ -92,15 +92,15 @@ if (${ONIKU_ENABLE_PYTHON})
     onnx_proto
     protobuf
     pthread
-    ${ONIKU_TVM_LIBRARIES}
-    ${ONIKU_CUDA_LIBRARIES}
+    ${CHAINER_COMPILER_TVM_LIBRARIES}
+    ${CHAINER_COMPILER_CUDA_LIBRARIES}
     )
   set_target_properties(run_onnx_core.so
     PROPERTIES
     PREFIX "${PYTHON_MODULE_PREFIX}"
     SUFFIX "${PYTHON_MODULE_SUFFIX}")
 
-  if(${ONIKU_ENABLE_OPENCV})
+  if(${CHAINER_COMPILER_ENABLE_OPENCV})
     add_library(train_imagenet_core.so MODULE train_imagenet_core.cc)
 
     target_link_libraries(train_imagenet_core.so
@@ -116,8 +116,8 @@ if (${ONIKU_ENABLE_PYTHON})
       onnx_proto
       protobuf
       pthread
-      ${ONIKU_TVM_LIBRARIES}
-      ${ONIKU_CUDA_LIBRARIES}
+      ${CHAINER_COMPILER_TVM_LIBRARIES}
+      ${CHAINER_COMPILER_CUDA_LIBRARIES}
       ${OpenCV_LIBS}
       )
     set_target_properties(train_imagenet_core.so
