--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -2,7 +2,7 @@ get_filename_component(CHAINER_COMPILER_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR} PAT
 set(GOOGLETEST_INCLUDE_DIRS ${CHAINER_COMPILER_ROOT_DIR}/googletest/googletest/include)
 
 include_directories(${CHAINER_COMPILER_ROOT_DIR})
-add_library(oniku_common
+add_library(chainer_compiler_common
   log.cc
   strutil.cc
   )
@@ -12,7 +12,7 @@ add_executable(common_test
   strutil_test.cc
   )
 target_link_libraries(common_test
-  oniku_common
+  chainer_compiler_common
   onnx_proto
   protobuf
   gtest
