--- a/feeder/CMakeLists.txt
+++ b/feeder/CMakeLists.txt
@@ -21,7 +21,7 @@ include_directories(${GOOGLETEST_INCLUDE_DIRS})
 add_executable(feeder_test ${FEEDER_TEST_SRCS})
 target_link_libraries(feeder_test
   feeder
-  oniku_common
+  chainer_compiler_common
   chainerx
   gtest
   gtest_main
