Change module name of Python interface
to chainer_compiler

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -3,7 +3,7 @@ include_directories(${CHAINER_COMPILER_ROOT_DIR})
 include_directories(${PYTHON_INCLUDE_DIRS})
 include_directories(${CMAKE_BINARY_DIR})
 
-add_library(chainer_compiler_core.so MODULE oniku.cc)
+add_library(chainer_compiler_core.so MODULE chainer_compiler_core.cc)
 target_link_libraries(chainer_compiler_core.so
   PRIVATE
   chainer_compiler_tools
