Set CHAINERX_BUILD_CUDA when cuda is enabled

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,6 +120,8 @@ endif()
 if(${CHAINER_COMPILER_BUILD_CUDA})
   find_package(CUDA REQUIRED)
   if(${CUDA_FOUND})
+    set(CHAINERX_BUILD_CUDA ON)
+
     add_definitions(-DCHAINER_COMPILER_ENABLE_CUDA=1)
     set(CHAINER_COMPILER_CUDA_LIBRARIES ${CUDA_CUDART_LIBRARY})
 
