--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -335,8 +335,7 @@ function(gen_elichika_test dir all)
   add_custom_command(
     OUTPUT ${out_stamp}
     COMMAND PYTHONPATH=${CMAKE_CURRENT_SOURCE_DIR}/elichika python3 ${elichika_tests_py} --generate ${dir} && touch ${out_stamp}
-    MAIN_DEPENDENCY ${elichika_tests_py}
-    DEPENDS "${test_files}"
+    DEPENDS ${elichika_tests_py} ${test_files}
     )
 
   message(${out_stamp})
