--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache:
 
 before_install:
   - sudo apt-get install -y --no-install-recommends libprotobuf-dev protobuf-compiler libopencv-dev
-  - pip install gast numpy chainer onnx==1.3.0 onnx_chainer
+  - sudo pip install gast numpy chainer onnx==1.3.0 onnx_chainer
 
 script:
   - bash ./scripts/run-travis-tests.sh
