--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,13 @@ language: cpp
 
 dist: xenial
 
-python: "3.5"
-
 cache:
   - pip
   - ccache
 
 before_install:
-  - sudo apt-get install -y --no-install-recommends libprotobuf-dev protobuf-compiler libopencv-dev
-  - sudo pip install gast numpy chainer onnx==1.3.0 onnx_chainer
+  - sudo apt-get install -y --no-install-recommends libprotobuf-dev protobuf-compiler libopencv-dev python3-pip
+  - sudo pip3 install gast numpy chainer onnx==1.3.0 onnx_chainer
 
 script:
   - bash ./scripts/run-travis-tests.sh
