--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache:
 
 before_install:
   - sudo apt-get install -y --no-install-recommends libprotobuf-dev protobuf-compiler libopencv-dev python3-pip python3-setuptools
-  - sudo pip3 install gast numpy chainer onnx==1.3.0 onnx_chainer
+  - sudo pip3 install gast numpy chainer onnx==1.3.0 onnx_chainer pytest
 
 script:
   - bash ./scripts/run-travis-tests.sh
