--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,4 @@ addons:
     update: true
 
 env:
-  - CHAINER_BUILD_CHAINERX=1
-  - CHAINERX_BUILD_CUDA=1
+  - CHAINER_BUILD_CHAINERX=1 CHAINERX_BUILD_CUDA=1
