--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache:
 
 before_install:
   - sudo apt-get install -y --no-install-recommends libprotobuf-dev protobuf-compiler libopencv-dev python3-pip python3-setuptools
-  - sudo pip3 install gast numpy chainer==6.0.0b onnx==1.3.0 onnx_chainer pytest
+  - sudo pip3 install gast numpy chainer==6.0.0b2 onnx==1.3.0 onnx_chainer pytest
 
 script:
   - bash ./scripts/run-travis-tests.sh
@@ -18,4 +18,4 @@ addons:
     update: true
 
 env:
-  - CHAINER_BUILD_CHAINERX=1 CHAINERX_BUILD_CUDA=1
+  - CHAINER_BUILD_CHAINERX=1
