Disable Python test for now on Travis
There is a ABI issue around Python module and it takes too
much time to set up ChainerX on Travis.

Tracing bug:

https://github.com/pfnet-research/chainer-compiler/issues/2

Failure log:

https://travis-ci.org/pfnet-research/chainer-compiler/jobs/484280139

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,7 @@ addons:
   apt:
     update: true
 
-env:
-  - CHAINER_BUILD_CHAINERX=1 MAKEFLAGS=-j2
+# TODO(hamaji): ChainerX build is disabled for now.
+# https://github.com/pfnet-research/chainer-compiler/issues/2
+# env:
+#   - CHAINER_BUILD_CHAINERX=1 MAKEFLAGS=-j2
