Revert "Use ChainerX's pybind11 to build python module"
This reverts commit f8de068200088a17a2ea0863df909d9f3497ed44.

This broken CI.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,10 +76,6 @@ add_custom_target(onnx_files
 target_compile_definitions(onnx PRIVATE ONNX_API=)
 target_compile_options(onnx PRIVATE -w)
 
-if (${CHAINER_COMPILER_ENABLE_PYTHON})
-  set(CHAINERX_BUILD_PYTHON ON)
-endif()
-
 add_subdirectory(chainer/chainerx_cc)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/chainer/chainerx_cc)
 include_directories(${CMAKE_CURRENT_BINARY_DIR}/chainer/chainerx_cc/gsl-lite/include)
@@ -150,6 +146,9 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/onnx ${CMAKE_CURRENT_BINARY_DIR}
 add_custom_target(large_tests)
 
 if (${CHAINER_COMPILER_ENABLE_PYTHON})
+  get_third_party(pybind11)
+  include_directories(${CMAKE_BINARY_DIR}/pybind11/include)
+  add_subdirectory(${CMAKE_BINARY_DIR}/pybind11 ${CMAKE_BINARY_DIR}/pybind11-build)
   add_subdirectory(python)
 endif()
 
