--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required(VERSION 3.4)
 
+if(POLICY ${CMP0077})
+  cmake_policy(SET ${CMP0077} NEW)
+endif()
+
 execute_process(COMMAND git submodule update --init)
 
 include(cmake/third-party.cmake)
