--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,5 @@ addons:
   apt:
     update: true
 
-# TODO(hamaji): ChainerX build is disabled for now.
-# https://github.com/pfnet-research/chainer-compiler/issues/2
-# env:
-#   - CHAINER_BUILD_CHAINERX=1 MAKEFLAGS=-j2
+env:
+  - CHAINER_BUILD_CHAINERX=1 MAKEFLAGS=-j2
