--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache:
 
 before_install:
   - sudo apt-get install -y --no-install-recommends libprotobuf-dev protobuf-compiler libopencv-dev python3 python3-pip python3-setuptools cmake
-  - sudo pip3 install gast numpy chainer==6.0.0b2 onnx==1.3.0 onnx_chainer==1.3.0a4 pytest
+  - sudo pip3 install gast numpy onnx==1.3.0 onnx_chainer==1.3.0a4 pytest
 
 script:
   - bash ./scripts/run-travis-tests.sh
