Add onnx-chainer as a submodule
and use it during the build.

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -1,19 +1,34 @@
 get_filename_component(CHAINER_COMPILER_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR} PATH)
 set(CHAINER_COMPILER_TOOLS_DIR ${CHAINER_COMPILER_ROOT_DIR}/tools)
 
+set(ONNX_CHAINER_DEPS
+  onnx_chainer_util.py
+  ../third_party/onnx-chainer/onnx_chainer/__init__.py
+  ../third_party/onnx-chainer/onnx_chainer/export.py
+  ../third_party/onnx-chainer/onnx_chainer/mapping.py
+  ../third_party/onnx-chainer/onnx_chainer/functions/__init__.py
+  ../third_party/onnx-chainer/onnx_chainer/functions/activation.py
+  ../third_party/onnx-chainer/onnx_chainer/functions/array.py
+  ../third_party/onnx-chainer/onnx_chainer/functions/connection.py
+  ../third_party/onnx-chainer/onnx_chainer/functions/math.py
+  ../third_party/onnx-chainer/onnx_chainer/functions/noise.py
+  ../third_party/onnx-chainer/onnx_chainer/functions/normalization.py
+  ../third_party/onnx-chainer/onnx_chainer/functions/pooling.py
+  )
+
 add_custom_command(
   OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/backprop_test_oc_stamp
-  COMMAND python3 ${CMAKE_CURRENT_SOURCE_DIR}/gen_backprop_tests_oc.py && touch ${CMAKE_CURRENT_BINARY_DIR}/backprop_test_oc_stamp
+  COMMAND PYTHONPATH=third_party/onnx-chainer python3 ${CMAKE_CURRENT_SOURCE_DIR}/gen_backprop_tests_oc.py && touch ${CMAKE_CURRENT_BINARY_DIR}/backprop_test_oc_stamp
   MAIN_DEPENDENCY gen_backprop_tests_oc.py
-  DEPENDS onnx_chainer_util.py
+  DEPENDS ${ONNX_CHAINER_DEPS}
   WORKING_DIRECTORY ${CHAINER_COMPILER_ROOT_DIR}
   )
 
 add_custom_command(
   OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/backprop_test_pc_stamp
-  COMMAND python3 ${CMAKE_CURRENT_SOURCE_DIR}/gen_backprop_tests_pc.py && touch ${CMAKE_CURRENT_BINARY_DIR}/backprop_test_pc_stamp > /dev/null
+  COMMAND PYTHONPATH=third_party/onnx-chainer python3 ${CMAKE_CURRENT_SOURCE_DIR}/gen_backprop_tests_pc.py && touch ${CMAKE_CURRENT_BINARY_DIR}/backprop_test_pc_stamp > /dev/null
   MAIN_DEPENDENCY gen_backprop_tests_pc.py
-  DEPENDS onnx_chainer_util.py ${CH2O_FILES}
+  DEPENDS ${ONNX_CHAINER_DEPS} ${CH2O_FILES}
   WORKING_DIRECTORY ${CHAINER_COMPILER_ROOT_DIR}
   )
 
@@ -27,9 +42,9 @@ add_custom_command(
 
 add_custom_command(
   OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/mnist_mlp_stamp
-  COMMAND python3 ${CMAKE_CURRENT_SOURCE_DIR}/gen_mnist_mlp.py && touch ${CMAKE_CURRENT_BINARY_DIR}/mnist_mlp_stamp
+  COMMAND PYTHONPATH=third_party/onnx-chainer python3 ${CMAKE_CURRENT_SOURCE_DIR}/gen_mnist_mlp.py && touch ${CMAKE_CURRENT_BINARY_DIR}/mnist_mlp_stamp
   MAIN_DEPENDENCY gen_mnist_mlp.py
-  DEPENDS onnx_chainer_util.py
+  DEPENDS ${ONNX_CHAINER_DEPS}
   WORKING_DIRECTORY ${CHAINER_COMPILER_ROOT_DIR}
   )
 
